--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,29 +14,18 @@
 
 
 
+<!-- WELCOME SCREEN -->
+<!-- <div class="welcomescreen">
+    <img src="/logo.png" class="logo">
+</div> -->
+
+
+
+
 <div>
     <div class="welcomee">
         <!-- <div class="otherone bg-green">
         </div> -->
-        <span></span>
-        <span class="falling-text">W</span>
-        <span class="falling-text">E</span>
-        <span class="falling-text">D</span>
-        <span class="falling-text">D</span>
-        <span class="falling-text">A</span>
-        <span class="falling-text">N</span>
-        <span class="falling-text">C</span>
-        <span class="falling-text">E</span>
+        <img src="/logo.png" class="logo">
     </div>
 </div>
-<div>
-    <!-- <video>
-        <source src="/welcomeBlast.mp4">
-    </video> -->
-</div>
-
-<!-- <div class="d-flex bg-dark"
-    style="display: flex; height: 100vh; justify-content: center; align-items: center; flex-direction: column;">
-    <img src="/logo.png" style="height: 200px;">
-    <h1 class="text-white my-5">Coming Soon........</h1>
-</div> -->
