--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -17,44 +17,44 @@
 
         <div class="col-lg-4 col-12 mx-0 px-2">
 
-            <img class="galleryItem rr" src="/1.JPG">
+            <img class="galleryItem left" src="/1.JPG">
 
-            <img class="galleryItem rr" src="/2.JPG">
+            <img class="galleryItem left" src="/2.JPG">
 
-            <img class="galleryItem rr" src="/3.JPG">
+            <img class="galleryItem left" src="/3.JPG">
 
-            <img class="galleryItem rr" src="/9.PNG">
-            <img class="galleryItem rr" src="/10.JPG">
-            <img class="galleryItem rr" src="/11.JPG">
+            <img class="galleryItem left" src="/9.PNG">
+            <img class="galleryItem left" src="/10.JPG">
+            <img class="galleryItem left" src="/11.JPG">
         </div>
 
         <div class="col-lg-4 col-12 mx-0 px-2">
-            <img class="galleryItem rr" src="/12.JPG">
+            <img class="galleryItem center" src="/12.JPG">
 
-            <img class="galleryItem rr" src="/4.JPG">
-
-
-            <img class="galleryItem rr" src="/5.JPG">
-
-            <img class="galleryItem rr" src="/6.PNG">
+            <img class="galleryItem center" src="/4.JPG">
 
 
-            <img class="galleryItem rr" src="/13.JPG">
-            <img class="galleryItem rr" src="/14.AVIF">
+            <img class="galleryItem center" src="/5.JPG">
+
+            <img class="galleryItem center" src="/6.PNG">
+
+
+            <img class="galleryItem center" src="/13.JPG">
+            <img class="galleryItem center" src="/14.AVIF">
 
         </div>
 
 
         <div class="col-lg-4 col-12 mx-0 px-2">
-            <img class="galleryItem rr" src="/15.JPG">
-            <img class="galleryItem rr" src="/7.PNG">
+            <img class="galleryItem right" src="/15.JPG">
+            <img class="galleryItem right" src="/7.PNG">
 
-            <img class="galleryItem rr" src="/8.PNG">
+            <img class="galleryItem right" src="/8.PNG">
 
 
-            <img class="galleryItem rr" src="/16.JPG">
-            <img class="galleryItem rr" src="/17.JPG">
-            <img class="galleryItem rr" src="/18.JPG">
+            <img class="galleryItem right" src="/16.JPG">
+            <img class="galleryItem right" src="/17.JPG">
+            <img class="galleryItem right" src="/18.JPG">
 
         </div>
     </div>
