--- a/src/app/components/gallery/gallery.component.css
+++ b/src/app/components/gallery/gallery.component.css
@@ -2,38 +2,57 @@
     width: 100%;
     /* height: 30%; */
     cursor: pointer;
-    animation-name: galleryItem;
+    /* animation-name: galleryItem;
     animation-duration: 3s;
-    animation-iteration-count: 1;
+    animation-iteration-count: 1; */
     margin-top: 3%;
     margin-bottom: 3%;
 }
 
-.rr{
-    animation-name: rr;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
+.left{
+    animation-name: left;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
 }
 
-@keyframes rr {
-    33%{
-        /* margin-top: -500%; */
-        width: 100%;
-    }66%{
+@keyframes left {
+    0%{
+        transform: translateX(-300px);
+    }
+    100%{
         /* margin-left: 0px; */
-        width: 99%;
-    }100%{
-        width: 100%;
     }
 }
 
-@keyframes galleryItem {
-    from{
-        margin-top: -500%;
-        width: 90%;
-    }to{
-        /* margin-left: 0px; */
-        width: 100%;
+
+.center{
+    animation-name: center;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+}
+
+@keyframes center {
+    0%{
+       transform: translatey(300px);
+    }
+    100%{
+        /* margin-right: 0px; */
+    }
+}
+
+
+.right{
+    animation-name: right;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+}
+
+@keyframes right {
+    0%{
+       transform: translateX(300px);
+    }
+    100%{
+        /* margin-right: 0px; */
     }
 }
 
