--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -30,6 +30,11 @@
                         <a [ngClass]="{'border-top border-bottom': services, '': !services}" class="nav-link"
                             style="cursor: pointer;" (click)="routee('/services')">Services</a>
                     </li>
+
+                    <li class="nav-item mx-4">
+                        <a [ngClass]="{'border-top border-bottom': review, '': !review}" class="nav-link"
+                            aria-current="page" style="cursor: pointer;" (click)="routee('/review')">Review</a>
+                    </li>
                     <!-- <li class="nav-item mx-4 dropdown">
                         <a [ngClass]="{'border-top border-bottom': services, '': !services}" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
