--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -113,48 +113,28 @@ section {
 
 /* Services */
 .serviceItem {
+    
+    width: 90%;
+    height: 230px;
+
+    border-radius: 10px;
+    box-shadow: 7px 7px 7px rgb(20, 20, 20);
+}
+
+.serviceItemIn{
+    background-color: rgba(0, 0, 0, 0.692); 
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
     flex-direction: column;
-    border-radius: 30px;
-    box-shadow: 0px 0px 6px black;
-    font-size: 20px;
-    font-weight: 500;
-    animation-name: serviceItem;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-    cursor: pointer;
+    align-items: center;
+    color: white;
+    height: 100%;
+    width: 100%;
+    border-radius: 10px;
+    text-align: center;
 }
 
-.serviceIte img {
-    animation-name: serviceItem;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-}
 
-@keyframes serviceItem {
-    0% {
-        padding-left: 4%;
-    }
-
-    25% {
-        padding-left: 0%;
-    }
-
-    50% {
-        padding-left: 4%;
-    }
-
-    75% {
-        padding-left: 0%;
-    }
-
-    100% {
-        padding-left: 4%;
-    }
-
-}
 
 
 
@@ -162,7 +142,7 @@ section {
 
 /* gallery */
 
-.gallery-head{
+.gallery-head {
     font-size: clamp(3vw, 1vw, 1vh);
 }
 
@@ -200,7 +180,8 @@ section {
     height: 220px;
     /* width: 300px; */
 }
-.bioheading{
+
+.bioheading {
     font-size: clamp(3vw, 1vw, 1vh);
 }
 
@@ -320,9 +301,22 @@ section {
     z-index: 4;
 }
 
-.popupHead{
+.popupHead {
     font-size: 24px;
 }
+
+
+
+/* EARTH ROTATE */
+
+
+.earthRotate span{
+    background: linear-gradient(90deg,  #fceb8e, #f5e9a8, #f7efaf, #fceb8e);
+    -webkit-background-clip: text;
+            background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 
 
 @media screen and (max-width: 900px) {
@@ -347,10 +341,10 @@ section {
 
 @media screen and (max-width: 480px) {
 
-    .gallery-head{
+    .gallery-head {
         font-size: clamp(7vw, 1vw, 1vh);
     }
-    
+
 
     section {
         font-size: 14px;
@@ -370,7 +364,7 @@ section {
         text-align: center;
     }
 
-    .bioheading{
+    .bioheading {
         font-size: clamp(7vw, 1vw, 1vh);
     }
 
