--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -117,74 +117,106 @@
   </div>
 
 
+
+
+  <!-- BIOGRAHY -->
+  <div class="row biography bg-dark py-3" style="box-shadow: 0px 0px 7px 7px black;">
+    <div class="breathe-animation my-2 text-center">
+      <span class="bioheading" style="color: rgb(255, 255, 255);">Biography</span>
+    </div>
+    <div class="col-lg-6 col-md-6 col-12 aboutUsImg my-4">
+      <img class="mx-auto" src="/logo.png">
+    </div>
+    <div class="col-lg-6 col-md-6 col-12 my-4">
+      <div class="text-white mx-auto" style="text-align: justify;">
+        The WedDance presents to you our comprehensive first dance program to ensure that you will have the perfect
+        dance for your once-in-a-lifetime!<br><br>
+        We are here to help organise every detail - whether it be a group performance, the couple’s dance, the very
+        special father daughter dance, the bride & groom entry or even solo performances - our wedding dance
+        choreographers will prepare perfect dance routines for your upcoming Wedding!<br><br>
+
+        These are some of the perks you can expect:<br><br>
+        <span class="my-2">=> Detailed Consultation for thematic choreography and audience experience
+        </span><br>
+        <span class="my-2">=> Instructors come with relevant experience of a Professional DanceSport background
+        </span><br>
+        <span class="my-2">=> Song Editing provided to create maximum impact
+        </span><br>
+        <span class="my-2">=> Flexible Timing for Lessons</span><br>
+        <span class="my-2">=> Private Sessions With Instructors
+        </span><br>
+        <span class="my-2">=> Proven track record - see results in just 4 sessions!
+        </span><br>
+
+        Let Weddance turn your cherished moments into a dance that will be remembered for a lifetime.
+
+      </div>
+    </div>
+  </div>
+
+
   <!-- Services -->
   <div class="row mt-5">
-    <div class="col-lg-3 col-md-6 col-12 my-2">
-      <div class="mx-5 bg-white serviceItem"
-        (click)="openPopUp(serviceDataArray[0].head, serviceDataArray[0].content1, serviceDataArray[0].content2)">
-        <img style="height: 180px;" src="https://cdn-icons-png.flaticon.com/512/40/40203.png">
-        <section>
-          <h1 class="text-shadow my-3">Couple Dance</h1>
-        </section>
+
+
+    <div class="col-lg-3 col-md-6 col-12 my-2 reveal">
+      <div class="mx-auto bg-white serviceItem" style="background: url('/virtualWeddibgChoreograhy.jpg'); background-position: center;
+    background-size: contain;">
+        <div class="serviceItemIn">
+          <div></div>
+          <span style="font-family: Montserrat; font-size: 22px; font-weight: 600;">Virtual Wedding Choreography</span>
+          <div (click)="openPopUp(serviceDataArray[0].head, serviceDataArray[0].content1, serviceDataArray[0].content2)" class="bg-dark w-100 py-2">Click to Explore</div>
+        </div>
       </div>
     </div>
 
-    <div class="col-lg-3 col-md-6 col-12 my-2">
-      <div class="mx-5 bg-white serviceItem"
-        (click)="openPopUp(serviceDataArray[1].head, serviceDataArray[1].content1, serviceDataArray[1].content2)">
-        <img style="height: 180px;" src="https://cdn0.iconfinder.com/data/icons/party-human-1/66/29-512.png">
-
-        <section>
-          <h1 class="text-shadow my-3">Group Dance</h1>
-        </section>
-      </div>
-    </div>
-
-
-    <div class="col-lg-3 col-md-6 col-12 my-2">
-      <div class="mx-5 bg-white serviceItem"
-        (click)="openPopUp(serviceDataArray[2].head, serviceDataArray[2].content1, serviceDataArray[2].content2)">
-        <img style="height: 180px;"
-          src="https://images.vexels.com/media/users/3/236440/isolated/preview/5cff4483ed2d0027d2512e2b29c227c3-girl-in-long-dress-silhouette.png">
-        <section>
-          <h1 class="text-shadow my-3">Ladies Sangeet</h1>
-        </section>
+    <div class="col-lg-3 col-md-6 col-12 my-2 reveal">
+      <div class="mx-auto bg-white serviceItem" style="background: url('/customChoreography.jpg'); background-repeat: no-repeat; background-position: center;
+    background-size: cover;">
+        <div class="serviceItemIn">
+          <div></div>
+          <span style="font-family: Montserrat; font-size: 22px; font-weight: 600;">Virtual Wedding Choreography</span>
+          <div (click)="openPopUp(serviceDataArray[0].head, serviceDataArray[0].content1, serviceDataArray[0].content2)" class="bg-dark w-100 py-2">Click to Explore</div>
+        </div>
       </div>
     </div>
 
 
-    <div class="col-lg-3 col-md-6 col-12 my-2">
-      <div class="mx-5 bg-white serviceItem"
-        (click)="openPopUp(serviceDataArray[3].head, serviceDataArray[3].content1, serviceDataArray[3].content2)">
-        <img style="height: 180px;" src="https://logolook.net/wp-content/uploads/2023/12/Michael-Jackson-logo.png">
-        <section>
-          <h1 class="text-shadow my-3">Solo Dance</h1>
-        </section>
+    <div class="col-lg-3 col-md-6 col-12 my-2 reveal">
+      <div class="mx-auto bg-white serviceItem" style="background: url('/weddingChoreography.jpg'); background-position: center;
+    background-size: cover;">
+        <div class="serviceItemIn">
+          <div></div>
+          <span style="font-family: Montserrat; font-size: 22px; font-weight: 600;">Virtual Wedding Choreography</span>
+          <div (click)="openPopUp(serviceDataArray[0].head, serviceDataArray[0].content1, serviceDataArray[0].content2)" class="bg-dark w-100 py-2">Click to Explore</div>
+        </div>
       </div>
     </div>
+
+
+    <div class="col-lg-3 col-md-6 col-12 my-2 reveal">
+      <div class="mx-auto bg-white serviceItem" style="background: url('/persnolizedEntries.jpg'); background-position: center;
+    background-size: cover;">
+        <div class="serviceItemIn">
+          <div></div>
+          <span style="font-family: Montserrat; font-size: 22px; font-weight: 600;">Virtual Wedding Choreography</span>
+          <div (click)="openPopUp(serviceDataArray[0].head, serviceDataArray[0].content1, serviceDataArray[0].content2)" class="bg-dark w-100 py-2">Click to Explore</div>
+        </div>
+      </div>
+    </div>
+
   </div>
 
 
+  <!-- EARTH ROTATE -->
 
-
-  <!-- About Us -->
-  <div class="row aboutUs mt-5 bg-dark py-5" style="box-shadow: 0px 0px 7px 7px black;">
-    <div class="col-lg-6 col-md-6 col-12 aboutUsImg reveal">
-      <img src="/aboutus.JPG">
-    </div>
-
-    <div class="col-lg-6 col-md-6 col-11 aboutUsText px-3 py-3 my-auto reveal">
-      <h2>About Us!</h2>
-      <span class="text-center" style="font-size: 17px; text-align: justify; font-weight: 500;">A premier wedding
-        choreography company
-        renowned for transforming ordinary celebrations into extraordinary experiences. With a passion for dance and a
-        knack for creating memorable moments, Raj has brought joy to countless couples and their families through
-        expertly crafted choreography that reflects their unique love stories. His innovative approach combines
-        traditional and contemporary styles, ensuring that every performance is not only stunning but also deeply
-        personal.</span>
+  <div class="row bg-dark mt-5">
+    <div class="earthRotate" style="display: flex; justify-content: center; flex-direction: column; align-items: center;">
+      <span style="font-family: Montserrat; font-size: 60px;">Our Mission</span>
+      <span class="text-center" style="font-family: Montserrat; font-size: 25px; font-weight: bold;">Spread Happiness Through Dance</span>
+      <img style="height: 300px;" src="https://upload.wikimedia.org/wikipedia/commons/7/7f/Rotating_earth_animated_transparent.gif">
     </div>
   </div>
-
 
 
   <!-- OUR GALLERY -->
@@ -242,43 +274,6 @@
   </div>
 
 
-
-  <!-- BIOGRAHY -->
-  <div class="row biography bg-dark py-3 reveal" style="box-shadow: 0px 0px 7px 7px black;">
-    <div class="breathe-animation my-2 text-center">
-      <span class="bioheading" style="color: rgb(255, 255, 255);">Biography</span>
-    </div>
-    <div class="col-lg-6 col-md-6 col-12 aboutUsImg my-4">
-      <img class="mx-auto" src="/logo.png">
-    </div>
-    <div class="col-lg-6 col-md-6 col-12 my-4">
-      <div class="text-white mx-auto" style="text-align: justify;">
-        The WedDance presents to you our comprehensive first dance program to ensure that you will have the perfect
-        dance for your once-in-a-lifetime!<br><br>
-        We are here to help organise every detail - whether it be a group performance, the couple’s dance, the very
-        special father daughter dance, the bride & groom entry or even solo performances - our wedding dance
-        choreographers will prepare perfect dance routines for your upcoming Wedding!<br><br>
-
-        These are some of the perks you can expect:<br><br>
-        <span class="my-2">=> Detailed Consultation for thematic choreography and audience experience
-        </span><br>
-        <span class="my-2">=> Instructors come with relevant experience of a Professional DanceSport background
-        </span><br>
-        <span class="my-2">=> Song Editing provided to create maximum impact
-        </span><br>
-        <span class="my-2">=> Flexible Timing for Lessons</span><br>
-        <span class="my-2">=> Private Sessions With Instructors
-        </span><br>
-        <span class="my-2">=> Proven track record - see results in just 4 sessions!
-        </span><br>
-
-        Let Weddance turn your cherished moments into a dance that will be remembered for a lifetime.
-
-      </div>
-    </div>
-  </div>
-
-
   <!-- Video -->
   <div class="row py-4 reveal" style="background-color: rgba(0, 0, 0, 0.274);; box-shadow: 2px 2px 7px black; ;">
     <!-- <h1 class="text-center text-white">Take a look on our Events</h1> -->
@@ -289,6 +284,33 @@
       <span class="text-white">Play</span>
     </div>
   </div>
+
+
+  <!-- About Us -->
+  <div class="row aboutUs mt-5 bg-dark py-5" style="box-shadow: 0px 0px 7px 7px black;">
+    <div class="col-lg-6 col-md-6 col-12 aboutUsImg reveal">
+      <img src="/aboutus.JPG">
+    </div>
+
+    <div class="col-lg-6 col-md-6 col-11 aboutUsText px-3 py-3 my-auto reveal">
+      <h2>About Us!</h2>
+      <span class="text-center" style="font-size: 17px; text-align: justify; font-weight: 500;">A premier wedding
+        choreography company
+        renowned for transforming ordinary celebrations into extraordinary experiences. With a passion for dance and a
+        knack for creating memorable moments, Raj has brought joy to countless couples and their families through
+        expertly crafted choreography that reflects their unique love stories. His innovative approach combines
+        traditional and contemporary styles, ensuring that every performance is not only stunning but also deeply
+        personal.</span>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
 
 
 
