--- a/src/app/components/packages/packages.component.html
+++ b/src/app/components/packages/packages.component.html
@@ -253,8 +253,8 @@
 
         <!-- Silver -->
         <div class="col-lg-3 col-md-3 col-12 px-2 my-4">
-            <div class="bg-white text-center mx-3 py-4 packageCompo2"
-                style="display: flex; justify-content: center; flex-direction: column; border-radius: 30px;">
+            <div class="text-center mx-3 py-4 packageCompo2"
+                style="background: linear-gradient(180deg, #4d4d4d, #d8d8d8, #ffff, #d8d8d8, #4d4d4d); display: flex; justify-content: center; flex-direction: column; border-radius: 30px;">
                 <span style="font-size:25px; font-weight: 600;">Silver Package</span>
                 <span style="font-size:50px; font-weight: 700; color: #b9a11a; display: flex; justify-content: center;">
                     <span>&#8377;</span><span>50K</span>
@@ -427,8 +427,8 @@
 
         <!-- Golden -->
         <div class="col-lg-3 col-md-3 col-12 px-2 my-4">
-            <div class="bg-white text-center mx-3 py-4 packageCompo3"
-                style="display: flex; justify-content: center; flex-direction: column; border-radius: 30px;">
+            <div class="text-center mx-3 py-4 packageCompo3"
+                style="background: linear-gradient(180deg, #ECC440, #FFFA8A, #DDAC17, #FFFF95); display: flex; justify-content: center; flex-direction: column; border-radius: 30px;">
                 <span style="font-size:25px; font-weight: 600;">Gold Package</span>
                 <span style="font-size:50px; font-weight: 700; color: #b9a11a; display: flex; justify-content: center;">
                     <span>&#8377;</span><span>2 Lakh</span>
@@ -601,8 +601,8 @@
 
         <!-- Platinum -->
         <div class="col-lg-3 col-md-3 col-12 px-2 my-4">
-            <div class="bg-white text-center mx-3 py-4 packageCompo4"
-                style="display: flex; justify-content: center; flex-direction: column; border-radius: 30px;">
+            <div class="text-center mx-3 py-4 packageCompo4"
+                style="background: linear-gradient(180deg, #D9D8D6, #E5E4E2, #F1F0ED, #D9D8D6); display: flex; justify-content: center; flex-direction: column; border-radius: 30px;">
                 <span style="font-size:25px; font-weight: 600;">Platinum Package</span>
                 <span style="font-size:50px; font-weight: 700; color: #b9a11a; display: flex; justify-content: center;">
                     <span>&#8377;</span><span>3 Lakh</span>
