--- a/src/app/components/services/services.component.css
+++ b/src/app/components/services/services.component.css
@@ -73,6 +73,24 @@
 
 /* SERVICES */
 
+.serviceHead{
+    font-size: 40px;
+    font-weight: 600;
+    animation-name: serviceHead;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-fill-mode:backwards
+}
+
+@keyframes serviceHead {
+    from{
+        text-shadow: 2px 2px 4px rgb(88, 88, 88);
+    }to{
+        /* text-shadow: none */
+        text-shadow: 1px 1px 4px rgb(88, 88, 88);;
+    }
+}
+
 
 .service1 {
     background: url('/ladiesSangeet.JPG');
@@ -160,6 +178,8 @@
     color: white;
     font-size: 20px;
     font-weight: 600;
+    display: flex;
+    justify-content: space-between;
 }
 
 
