--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,12 @@
             src="https://i.pinimg.com/originals/43/08/82/430882b2a9c08ee91f4259ba040cc577.png" class="imgIcon"></a>
 </div>
 
+<!-- call ICON -->
+<div class="container w-25" class="call">
+    <a href="tel:9911587963" target="_blank"><img
+            src="https://images.vexels.com/media/users/3/137415/isolated/preview/0e475bb9b17b3fa4f94f31fba1635b8f-telephone-call-icon-logo.png?w=360" class="imgIconCall"></a>
+</div>
+
 
 
 
