--- a/src/app/components/careers/careers.component.css
+++ b/src/app/components/careers/careers.component.css
@@ -1,5 +1,5 @@
 .carrerMain {
-    background: url('https://img.freepik.com/free-vector/party-couple-sparkle-background_1048-8602.jpg?t=st=1740488376~exp=1740491976~hmac=f8800e36d4e54012d965fffa974aa76d4de8b7b45c8675eccf572e78ca109bf4&w=1060');
+    background: url('https://images.unsplash.com/photo-1623449227513-0ef552cb341d?q=80&w=1530&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
     /* height: 90vh; */
     width: 100%;
     background-size: cover;
