--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -43,7 +43,7 @@
       </div>
   
   
-      <div class="row mt-4">
+      <div class="row mt-4 mb-4">
         <div class="footer-logo col-lg-4 col-6 text-white">
           <img src="/logo.png" style="height: 150px;"><br>
           <!-- <span style="font-family: Georgia;">Key for Growth</span> -->
@@ -71,6 +71,10 @@
          <a style="text-decoration: none;" routerLink="/aboutUs"><span class="footer-content" style="color:rgb(216, 217, 218)">About Us</span></a>
         </div>
         </div>
+      </div>
+
+      <div class="row mt-5" class="text-center text-white">
+      <span class="footerlegal">© 2025 Your Company. All rights reserved. | Privacy Policy | Terms of Service || Developed By Key For Growth</span>
       </div>
     </div>
   </section>
