--- a/src/app/home2/home2.component.html
+++ b/src/app/home2/home2.component.html
@@ -15,7 +15,7 @@
       </h1>
     </section>
     <span class="text-white" style="font-size: 18px; letter-spacing: 1px;">
-      {{this.content1}}<br><br>
+      {{this.content1}}<br>
 
       {{this.content2}}<br><br>
       You can contact us further queries to bring a lot of joy and happiness to your wedding!"
@@ -128,7 +128,7 @@
       <img class="mx-auto" src="/logo.png">
     </div>
     <div class="col-lg-6 col-md-6 col-12 my-4">
-      <div class="text-white mx-auto" style="text-align: justify;">
+      <div class="text-white mx-auto">
         The WedDance presents to you our comprehensive first dance program to ensure that you will have the perfect
         dance for your once-in-a-lifetime!<br><br>
         We are here to help organise every detail - whether it be a group performance, the couple’s dance, the very
@@ -136,18 +136,20 @@
         choreographers will prepare perfect dance routines for your upcoming Wedding!<br><br>
 
         These are some of the perks you can expect:<br><br>
-        <span class="my-2">=> Detailed Consultation for thematic choreography and audience experience
-        </span><br>
-        <span class="my-2">=> Instructors come with relevant experience of a Professional DanceSport background
-        </span><br>
-        <span class="my-2">=> Song Editing provided to create maximum impact
-        </span><br>
-        <span class="my-2">=> Flexible Timing for Lessons</span><br>
-        <span class="my-2">=> Private Sessions With Instructors
-        </span><br>
-        <span class="my-2">=> Proven track record - see results in just 4 sessions!
-        </span><br>
 
+        <ul>
+          <li class="my-2">Detailed Consultation for thematic choreography and audience experience
+          </li><br>
+          <li class="my-2">Instructors come with relevant experience of a Professional DanceSport background
+          </li><br>
+          <li class="my-2">Song Editing provided to create maximum impact
+          </li><br>
+          <li class="my-2">Flexible Timing for Lessons</li><br>
+          <li class="my-2">Private Sessions With Instructors
+          </li><br>
+          <li class="my-2">Proven track record - see results in just 4 sessions!
+          </li><br>
+        </ul>
         Let Weddance turn your cherished moments into a dance that will be remembered for a lifetime.
 
       </div>
@@ -166,7 +168,7 @@
           <div></div>
           <span style="font-family: Montserrat; font-size: 22px; font-weight: 600;">Virtual Wedding Choreography</span>
           <div (click)="openPopUp(serviceDataArray[0].head, serviceDataArray[0].content1, serviceDataArray[0].content2)"
-            class="bg-dark w-100 py-2">Click to Explore</div>
+            class="bg-dark w-100 py-2" style="cursor: pointer;">Click to Explore</div>
         </div>
       </div>
     </div>
@@ -178,7 +180,7 @@
           <div></div>
           <span style="font-family: Montserrat; font-size: 22px; font-weight: 600;">Virtual Wedding Choreography</span>
           <div (click)="openPopUp(serviceDataArray[0].head, serviceDataArray[0].content1, serviceDataArray[0].content2)"
-            class="bg-dark w-100 py-2">Click to Explore</div>
+            class="bg-dark w-100 py-2" style="cursor: pointer;">Click to Explore</div>
         </div>
       </div>
     </div>
@@ -191,7 +193,7 @@
           <div></div>
           <span style="font-family: Montserrat; font-size: 22px; font-weight: 600;">Virtual Wedding Choreography</span>
           <div (click)="openPopUp(serviceDataArray[0].head, serviceDataArray[0].content1, serviceDataArray[0].content2)"
-            class="bg-dark w-100 py-2">Click to Explore</div>
+            class="bg-dark w-100 py-2" style="cursor: pointer;">Click to Explore</div>
         </div>
       </div>
     </div>
@@ -204,7 +206,7 @@
           <div></div>
           <span style="font-family: Montserrat; font-size: 22px; font-weight: 600;">Virtual Wedding Choreography</span>
           <div (click)="openPopUp(serviceDataArray[0].head, serviceDataArray[0].content1, serviceDataArray[0].content2)"
-            class="bg-dark w-100 py-2">Click to Explore</div>
+            class="bg-dark w-100 py-2" style="cursor: pointer;">Click to Explore</div>
         </div>
       </div>
     </div>
