--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -2,39 +2,71 @@
 <app-spinner></app-spinner>
 }
 
-<div class="main py-5" style="display: flex; justify-content: center; align-items: center;">
-    <div class="contactForm col-lg-4 col-md-6 col-11 mx-auto pb-5 px-3 my-5">
+<div class="container-fluid pb-5 "
+    style="  background: linear-gradient(180deg,  #fceb8e, #f5e9a8, #f7efaf, #fceb8e);">
+
+    <div class="row">
+        <div class="col-lg-6 col-md-7 col-12 contactInfo mx-auto py-3 my-3 px-5">
+            <div class="text-center">
+                <b>
+                    Chat Support: </b> <a target="_blank" href="https://wa.me/919911587963">Chat&nbsp;Now</a>
+            </div>
+
+            <div class="text-center">
+                <b>
+                    Mail Support: </b> <a href="">Email&nbsp;Now</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+
+        <div class="col-lg-3 col-md-3 col-11 mx-auto" style="display: flex; align-items: center;">
+            <img style="height:300px;" src="/contactImage.webp">
+        </div>
 
 
-        <h1 class="text-end mx-2 contactFormHeading mb-4 px-3 mt-3">Contact</h1>
 
-        <form [formGroup]="contactForm">
-            <div class="form-group my-4">
-                <label for="name">Full Name <span class="text-danger">*</span></label>
-                <input class="form-control" formControlName="name" type="text" placeholder="Enter Your Name">
-                @if(contactForm.get('name')?.invalid && contactForm.get('name')?.touched){
-                <span class="text-danger">Required</span>
-                }
+        <div class="col-lg-6 col-md-6 col-11 mx-auto contactForm">
+            <div>
+                <h1 class="px-3 mx-auto text-center" style="border-bottom: 3px solid black; border-radius: 20px">
+                    Contact Form</h1>
             </div>
-            <div class="form-group my-4">
-                <label for="email">Email <span class="text-danger">*</span></label>
-                <input class="form-control" formControlName="email" type="email" placeholder="Enter your Email">
-                @if(contactForm.get('email')?.invalid && contactForm.get('email')?.touched){
-                <span class="text-danger">Required</span>
-                }
-            </div>
-            <div class="form-group my-4">
-                <label for="email">Number <span class="text-danger">*</span></label>
-                <input class="form-control" type="number" formControlName="number" placeholder="Enter your Number">
-                @if(contactForm.get('number')?.invalid && contactForm.get('number')?.touched){
-                <span class="text-danger">Required</span>
-                }
-            </div>
-            <div class="form-group my-4">
-                <label for="message">Comment or message</label>
-                <textarea class="form-control" placeholder="Enter your Comment" formControlName="comment"></textarea>
-            </div>
-            <button type="submit" class="btn btn-success" (click)="saveData()">Send Message</button>
-        </form>
+            <form [formGroup]="contactForm">
+                <div class="form-group">
+                    <label for="name">Full Name <span class="text-danger">*</span></label>
+                    <input style="box-shadow: 2px 2px 4px #fceb8e;" formControlName="name" type="text">
+                    @if(contactForm.get('name')?.invalid && contactForm.get('name')?.touched){
+                    <span class="text-danger">Required</span>
+                    }
+                </div>
+                <div class="form-group">
+                    <label for="email">Email <span class="text-danger">*</span></label>
+                    <input style="box-shadow: 2px 2px 4px #fceb8e;" formControlName="email" type="email">
+                    @if(contactForm.get('email')?.invalid && contactForm.get('email')?.touched){
+                        <span class="text-danger">Required</span>
+                       }
+                </div>
+                <div class="form-group">
+                    <label for="email">Number <span class="text-danger">*</span></label>
+                    <input style="box-shadow: 2px 2px 4px #fceb8e;" type="number" formControlName="number">
+                    @if(contactForm.get('number')?.invalid && contactForm.get('number')?.touched){
+                        <span class="text-danger">Required</span>
+                       }
+                </div>
+                <div class="form-group">
+                    <label for="message">Comment or message</label>
+                    <textarea style="box-shadow: 2px 2px 4px #fceb8e;" formControlName="comment"></textarea>
+                </div>
+                <button type="submit" (click)="saveData()">Send Message</button>
+            </form>
+        </div>
+
+
+        <div class="col-lg-3 col-md-3 col-11 mx-auto" style="display: flex; align-items: center;">
+            . <img style="height:300px;" src="/contactImage.webp">
+        </div>
+
+
     </div>
 </div>
