--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -5,6 +5,11 @@
   .footer h1, h2 {
     font-family: "sans-serif";
   } 
+
+  .footerlegal{
+    font-family:  'Roboto', sans-serif; ;
+    font-size: 12px;
+  }
   
   @media screen and (max-width: 541px) {
     .footer-logo{
