--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -26,7 +26,7 @@
          <div class="col-lg-4 my-3 col-md-4 col-12 px-0" style="display: flex; justify-content: center;">
             <div class="servic service1">
                <!-- <button class="btn btn-success px-5 viewButton mx-auto my-4" (click)="openPopUp(serviceDataArray[0].head, serviceDataArray[0].content1, serviceDataArray[0].content2)">View</button> -->
-               <div class="servictext mx-0 w-100 py-2"><span>Ladies Sangeet</span>
+               <div class="servictext mx-0 w-100 py-1"><span class="mx-2">Ladies Sangeet</span>
                   <img
                      (click)="openPopUp(serviceDataArray[0].head, serviceDataArray[0].content1, serviceDataArray[0].content2)"
                      style="height: 35px;" class="my-auto"
@@ -37,13 +37,13 @@
 
          <div class="col-lg-4 my-3 col-md-4 col-12 px-0" style="display: flex; justify-content: center;">
             <div class="servic service2">
-              <!-- <button class="btn btn-success px-5 viewButton mx-auto my-4"
+               <!-- <button class="btn btn-success px-5 viewButton mx-auto my-4"
                   (click)="openPopUp(serviceDataArray[1].head, serviceDataArray[1].content1, serviceDataArray[1].content2)">View</button> -->
-               <div class="servictext mx-0 w-100 py-2"><span>Bride and Groom entry</span></div>
+               <div class="servictext mx-0 w-100 py-1"><span class="mx-2">Bride and Groom entry</span>
                <img
-               (click)="openPopUp(serviceDataArray[1].head, serviceDataArray[1].content1, serviceDataArray[1].content2)"
-               style="height: 35px;" class="my-auto"
-               src="https://png.pngtree.com/png-clipart/20220206/original/pngtree-gold-arrow-head-png-image_7263825.png">
+                  (click)="openPopUp(serviceDataArray[1].head, serviceDataArray[1].content1, serviceDataArray[1].content2)"
+                  style="height: 35px;" class="my-auto"
+                  src="https://png.pngtree.com/png-clipart/20220206/original/pngtree-gold-arrow-head-png-image_7263825.png"></div>
             </div>
          </div>
 
@@ -51,94 +51,115 @@
 
          <div class="col-lg-4 my-3 col-md-4 col-12 px-0" style="display: flex; justify-content: center;">
             <div class="servic service3">
-                <!-- <button class="btn btn-success px-5 viewButton mx-auto my-4"
+               <!-- <button class="btn btn-success px-5 viewButton mx-auto my-4"
                   (click)="openPopUp(serviceDataArray[2].head, serviceDataArray[2].content1, serviceDataArray[2].content2)">View</button> -->
-               <div class="servictext mx-0 w-100 py-2"><span>Couple Dance</span></div>
+               <div class="servictext mx-0 w-100 py-1"><span class="mx-2">Couple Dance</span>
                <img
-               (click)="openPopUp(serviceDataArray[2].head, serviceDataArray[2].content1, serviceDataArray[2].content2)"
-               style="height: 35px;" class="my-auto"
-               src="https://png.pngtree.com/png-clipart/20220206/original/pngtree-gold-arrow-head-png-image_7263825.png">
-            </div>
+                  (click)="openPopUp(serviceDataArray[2].head, serviceDataArray[2].content1, serviceDataArray[2].content2)"
+                  style="height: 35px;" class="my-auto"
+                  src="https://png.pngtree.com/png-clipart/20220206/original/pngtree-gold-arrow-head-png-image_7263825.png">
+               </div>
+               </div>
          </div>
 
 
 
          <div class="col-lg-4 my-3 col-md-4 col-12 px-0 reveal" style="display: flex; justify-content: center;">
             <div class="servic service4">
-               <button class="btn btn-success px-5 viewButton mx-auto my-4"
-                  (click)="openPopUp(serviceDataArray[3].head, serviceDataArray[3].content1, serviceDataArray[3].content2)">View</button>
-               <div class="servictext mx-0 w-100 py-2"><span>Solo performance</span></div>
-            </div>
+               <div class="servictext mx-0 w-100 py-1"><span class="mx-2">Solo performance</span>
+              
+               <img
+                  (click)="openPopUp(serviceDataArray[3].head, serviceDataArray[3].content1, serviceDataArray[3].content2)"
+                  style="height: 35px;" class="my-auto"
+                  src="https://png.pngtree.com/png-clipart/20220206/original/pngtree-gold-arrow-head-png-image_7263825.png">
+               </div>
+               </div>
          </div>
 
          <div class="col-lg-4 my-3 col-md-4 col-12 px-0 reveal" style="display: flex; justify-content: center;">
             <div class="servic service5">
-               <button class="btn btn-success px-5 viewButton mx-auto my-4"
-                  (click)="openPopUp(serviceDataArray[4].head, serviceDataArray[4].content1, serviceDataArray[4].content2)">View</button>
-               <div class="servictext mx-0 w-100 py-2"><span>Wedding choreography</span></div>
-            </div>
+               <div class="servictext mx-0 w-100 py-1"><span class="mx-2">Wedding choreography</span>
+               <img
+                  (click)="openPopUp(serviceDataArray[4].head, serviceDataArray[4].content1, serviceDataArray[4].content2)"
+                  style="height: 35px;" class="my-auto"
+                  src="https://png.pngtree.com/png-clipart/20220206/original/pngtree-gold-arrow-head-png-image_7263825.png">
+            </div></div>
          </div>
 
 
 
          <div class="col-lg-4 my-3 col-md-4 col-12 px-0 reveal" style="display: flex; justify-content: center;">
             <div class="servic service6">
-               <button class="btn btn-success px-5 viewButton mx-auto my-4"
-                  (click)="openPopUp(serviceDataArray[5].head, serviceDataArray[5].content1, serviceDataArray[5].content2)">View</button>
-               <div class="servictext mx-0 w-100 py-2"><span>Event Dance Choreography</span></div>
-            </div>
+               <div class="servictext mx-0 w-100 py-1"><span class="mx-2">Event Dance Choreography</span>
+               <img
+                  (click)="openPopUp(serviceDataArray[5].head, serviceDataArray[5].content1, serviceDataArray[5].content2)"
+                  style="height: 35px;" class="my-auto"
+                  src="https://png.pngtree.com/png-clipart/20220206/original/pngtree-gold-arrow-head-png-image_7263825.png">
+            </div></div>
          </div>
 
          <div class="col-lg-4 my-3 col-md-4 col-12 px-0 reveal" style="display: flex; justify-content: center;">
             <div class="servic service7">
-               <button class="btn btn-success px-5 viewButton mx-auto my-4"
-                  (click)="openPopUp(serviceDataArray[6].head, serviceDataArray[6].content1, serviceDataArray[6].content2)">View</button>
-               <div class="servictext mx-0 w-100 py-2"><span>Groom Entry Themes</span></div>
-            </div>
+               <div class="servictext mx-0 w-100 py-1"><span class="mx-2">Groom Entry Themes</span>
+               <img
+                  (click)="openPopUp(serviceDataArray[6].head, serviceDataArray[6].content1, serviceDataArray[6].content2)"
+                  style="height: 35px;" class="my-auto"
+                  src="https://png.pngtree.com/png-clipart/20220206/original/pngtree-gold-arrow-head-png-image_7263825.png">
+            </div></div>
          </div>
 
 
          <div class="col-lg-4 my-3 col-md-4 col-12 px-0 reveal" style="display: flex; justify-content: center;">
             <div class="servic service8">
-               <button class="btn btn-success px-5 viewButton mx-auto my-4"
-                  (click)="openPopUp(serviceDataArray[7].head, serviceDataArray[7].content1, serviceDataArray[7].content2)">View</button>
-               <div class="servictext mx-0 w-100 py-2"><span>Bride Entry Themes</span></div>
-            </div>
+               <div class="servictext mx-0 w-100 py-1"><span class="mx-2">Bride Entry Themes</span>
+               <img
+                  (click)="openPopUp(serviceDataArray[7].head, serviceDataArray[7].content1, serviceDataArray[7].content2)"
+                  style="height: 35px;" class="my-auto"
+                  src="https://png.pngtree.com/png-clipart/20220206/original/pngtree-gold-arrow-head-png-image_7263825.png">
+            </div></div>
          </div>
 
          <div class="col-lg-4 my-3 col-md-4 col-12 px-0 reveal" style="display: flex; justify-content: center;">
             <div class="servic service9">
-               <button class="btn btn-success px-5 viewButton mx-auto my-4"
-                  (click)="openPopUp(serviceDataArray[8].head, serviceDataArray[8].content1, serviceDataArray[8].content2)">View</button>
-               <div class="servictext mx-0 w-100 py-2"><span>Group Dance</span></div>
-            </div>
+               <div class="servictext mx-0 w-100 py-1"><span class="mx-2">Group Dance</span>
+               <img
+                  (click)="openPopUp(serviceDataArray[8].head, serviceDataArray[8].content1, serviceDataArray[8].content2)"
+                  style="height: 35px;" class="my-auto"
+                  src="https://png.pngtree.com/png-clipart/20220206/original/pngtree-gold-arrow-head-png-image_7263825.png">
+            </div></div>
          </div>
 
 
          <div class="col-lg-4 my-3 col-md-4 col-12 px-0 reveal" style="display: flex; justify-content: center;">
             <div class="servic service10">
-               <button class="btn btn-success px-5 viewButton mx-auto my-4"
-                  (click)="openPopUp(serviceDataArray[9].head, serviceDataArray[9].content1, serviceDataArray[9].content2)">View</button>
-               <div class="servictext mx-0 w-100 py-2"><span>⁠Friends Dance</span></div>
-            </div>
+               <div class="servictext mx-0 w-100 py-1"><span class="mx-2">⁠Friends Dance</span>
+               <img
+                  (click)="openPopUp(serviceDataArray[9].head, serviceDataArray[9].content1, serviceDataArray[9].content2)"
+                  style="height: 35px;" class="my-auto"
+                  src="https://png.pngtree.com/png-clipart/20220206/original/pngtree-gold-arrow-head-png-image_7263825.png">
+            </div></div>
          </div>
 
 
          <div class="col-lg-4 my-3 col-md-4 col-12 px-0 reveal" style="display: flex; justify-content: center;">
             <div class="servic service11">
-               <button class="btn btn-success px-5 viewButton mx-auto my-4"
-                  (click)="openPopUp(serviceDataArray[10].head, serviceDataArray[10].content1, serviceDataArray[10].content2)">View</button>
-               <div class="servictext mx-0 w-100 py-2"><span>⁠Grand Varmala Designing</span></div>
-            </div>
+               <div class="servictext mx-0 w-100 py-1"><span class="mx-2">⁠Grand Varmala Designing</span>
+               <img
+                  (click)="openPopUp(serviceDataArray[10].head, serviceDataArray[10].content1, serviceDataArray[10].content2)"
+                  style="height: 35px;" class="my-auto"
+                  src="https://png.pngtree.com/png-clipart/20220206/original/pngtree-gold-arrow-head-png-image_7263825.png">
+            </div></div>
          </div>
 
 
          <div class="col-lg-4 my-3 col-md-4 col-12 px-0 reveal" style="display: flex; justify-content: center;">
             <div class="servic service12">
-               <button class="btn btn-success px-5 viewButton mx-auto my-4"
-                  (click)="openPopUp(serviceDataArray[11].head, serviceDataArray[11].content1, serviceDataArray[11].content2)">View</button>
-               <div class="servictext mx-0 w-100 py-2"><span>Flashmob Performance</span></div>
-            </div>
+               <div class="servictext mx-0 w-100 py-1"><span class="mx-2">Flashmob Performance</span>
+               <img
+                  (click)="openPopUp(serviceDataArray[11].head, serviceDataArray[11].content1, serviceDataArray[11].content2)"
+                  style="height: 35px;" class="my-auto"
+                  src="https://png.pngtree.com/png-clipart/20220206/original/pngtree-gold-arrow-head-png-image_7263825.png">
+            </div></div>
          </div>
 
 
@@ -162,7 +183,8 @@
       <div class="detail-text bg-black col-lg-5 col-md-6 col-11 p-4 pt-0" style="border-radius: 20px;">
          <section>
             <h1 class="text-shadow text-white mb-4 popupHead" style="border-bottom: 2px solid white;">
-               <u>{{this.head}}</u></h1>
+               <u>{{this.head}}</u>
+            </h1>
          </section>
          <span class="text-white" style="font-size: 18px; letter-spacing: 1px;">
             {{this.content1}}<br><br>
