--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,7 +15,7 @@
         </h1>
       </section>
       <span class="text-white" style="font-size: 18px; letter-spacing: 1px;">
-        {{this.content1}}<br> 
+        {{this.content1}}<br>
   
         {{this.content2}}<br><br>
         You can contact us further queries to bring a lot of joy and happiness to your wedding!"
@@ -106,7 +106,7 @@
       <div class="mainImage-in p-0">
         <div class="col-lg-12 col-md-12 col-12 w-100 py-2" style="background-color: rgba(0, 0, 0, 0.582);">
           <div class="mainImageText">
-            <h1 class="text-center">Celebrate Your Special Moments with Dance</h1>
+            <h1 class="text-center">Perfect your wedding dance with Weddance</h1>
             <h2 class="text-center">Grace, Energy, and Joy in Every Step! </h2>
             <div class="text-center"><button class="btn btn-success explorebtn" (click)="letsConnect('open')">Connect
                 Now</button></div>
@@ -128,26 +128,28 @@
         <img class="mx-auto" src="/logo.png">
       </div>
       <div class="col-lg-6 col-md-6 col-12 my-4">
-        <div class="text-white mx-auto" style="text-align: justify;">
+        <div class="text-white mx-auto">
           The WedDance presents to you our comprehensive first dance program to ensure that you will have the perfect
           dance for your once-in-a-lifetime!<br><br>
           We are here to help organise every detail - whether it be a group performance, the couple’s dance, the very
           special father daughter dance, the bride & groom entry or even solo performances - our wedding dance
           choreographers will prepare perfect dance routines for your upcoming Wedding!<br><br>
   
-          These are some of the perks you can expect:<br><br>
-          <span class="my-2">=> Detailed Consultation for thematic choreography and audience experience
-          </span><br>
-          <span class="my-2">=> Instructors come with relevant experience of a Professional DanceSport background
-          </span><br>
-          <span class="my-2">=> Song Editing provided to create maximum impact
-          </span><br>
-          <span class="my-2">=> Flexible Timing for Lessons</span><br>
-          <span class="my-2">=> Private Sessions With Instructors
-          </span><br>
-          <span class="my-2">=> Proven track record - see results in just 4 sessions!
-          </span><br>
+          These are some of the perks you can expect:<br>
   
+          <ul>
+            <li class="my-2">Detailed Consultation for thematic choreography and audience experience.
+            </li>
+            <li class="my-2">Instructors come with relevant experience of a Professional DanceSport background.
+            </li>
+            <li class="my-2">Song Editing provided to create maximum impact.
+            </li>
+            <li class="my-2">Flexible Timing for Lessons.</li>
+            <li class="my-2">Private Sessions With Instructors.
+            </li>
+            <li class="my-2">Proven track record - see results in just 4 sessions!
+            </li>
+          </ul>
           Let Weddance turn your cherished moments into a dance that will be remembered for a lifetime.
   
         </div>
@@ -301,13 +303,9 @@
   
       <div class="col-lg-6 col-md-6 col-11 aboutUsText px-3 py-3 my-auto reveal">
         <h2>About Us!</h2>
-        <span class="text-center" style="font-size: 17px; text-align: justify; font-weight: 500;">A premier wedding
-          choreography company
-          renowned for transforming ordinary celebrations into extraordinary experiences. With a passion for dance and a
-          knack for creating memorable moments, Raj has brought joy to countless couples and their families through
-          expertly crafted choreography that reflects their unique love stories. His innovative approach combines
-          traditional and contemporary styles, ensuring that every performance is not only stunning but also deeply
-          personal.</span>
+        <span class="text-center" style="font-size: 17px; text-align: justify; font-weight: 500;">
+          Raj Bhardwaj is the visionary founder of WEDDANCE, a premier wedding choreography company renowned for transforming ordinary celebrations into extraordinary experiences. His innovative approach combines traditional and contemporary styles, ensuring that every performance is not only stunning but also deeply personal. Whether it’s a first dance, a family flash mob, or a group performance, Raj Bhardwaj and his team at WEDDANCE are here to make your wedding dreams come alive on the dance floor.
+        </span>
       </div>
     </div>
   
