--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -22,7 +22,7 @@
     <div class="row">
 
         <div class="col-lg-3 col-md-3 col-11 mx-auto" style="display: flex; align-items: center;">
-            <img style="height:300px;" src="/contactImage.webp">
+            <!-- <img style="height:0px;" src="/contactUsImage.png"> -->
         </div>
 
 
@@ -64,7 +64,7 @@
 
 
         <div class="col-lg-3 col-md-3 col-11 mx-auto" style="display: flex; align-items: center;">
-            . <img style="height:300px;" src="/contactImage.webp">
+            <!-- . <img style="height:300px;" src="/contactImage.webp"> -->
         </div>
 
 
