--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,27 +3,19 @@
       <div class="row">
         <div class="col-lg-12 col-md-12 col-12" style="display: flex; justify-content: space-around;">
   
-          <a href="https://www.facebook.com/profile.php?id=61560217042868" target="_blank" style="cursor: pointer;"><svg xmlns="http://www.w3.org/2000/svg" width="21" height="21"
+          <a href="https://www.facebook.com/share/15crgwYrFb/?mibextid=LQQJ4d" target="_blank" style="cursor: pointer;"><svg xmlns="http://www.w3.org/2000/svg" width="21" height="21"
               fill="currentColor" class="bi bi-facebook text-white" viewBox="0 0 16 16">
               <path
                 d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951" />
             </svg></a>
            
   
-          <a href="https://www.linkedin.com/company/96436349/admin/dashboard/" target="_blank" style="cursor: pointer;"><svg
-              xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="currentColor"
-              class="bi bi-linkedin text-white" viewBox="0 0 16 16">
-              <path
-                d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z" />
-            </svg></a>
+          <a href="https://youtube.com/@weddanceofficial?si=3LZu7rxRzZDSRnkV" target="_blank" style="cursor: pointer;"><svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="currentColor" class="bi bi-youtube text-white" viewBox="0 0 16 16">
+            <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.01 2.01 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.01 2.01 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31 31 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.01 2.01 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A100 100 0 0 1 7.858 2zM6.4 5.209v4.818l4.157-2.408z"/>
+          </svg></a>
   
-          <a href="https://x.com/keyforgrowth" target="_blank" style="cursor: pointer;"><svg xmlns="http://www.w3.org/2000/svg" width="21"
-              height="21" fill="currentColor" class="bi bi-twitter text-white" viewBox="0 0 16 16">
-              <path
-                d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334q.002-.211-.006-.422A6.7 6.7 0 0 0 16 3.542a6.7 6.7 0 0 1-1.889.518 3.3 3.3 0 0 0 1.447-1.817 6.5 6.5 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.32 9.32 0 0 1-6.767-3.429 3.29 3.29 0 0 0 1.018 4.382A3.3 3.3 0 0 1 .64 6.575v.045a3.29 3.29 0 0 0 2.632 3.218 3.2 3.2 0 0 1-.865.115 3 3 0 0 1-.614-.057 3.28 3.28 0 0 0 3.067 2.277A6.6 6.6 0 0 1 .78 13.58a6 6 0 0 1-.78-.045A9.34 9.34 0 0 0 5.026 15" />
-            </svg></a>
-  
-          <a href="https://www.instagram.com/keyfor_growth/" target="_blank" style="cursor: pointer;"><svg
+
+          <a href="https://www.instagram.com/weddanceofficial?igsh=MWE0aWVpMGdnZDVuNQ%3D%3D&utm_source=qr" target="_blank" style="cursor: pointer;"><svg
               xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="currentColor"
               class="bi bi-instagram text-white" viewBox="0 0 16 16">
               <path
@@ -31,7 +23,7 @@
             </svg></a>
             
   
-            <a href="mailto:service@keyforgrowth.com" style="cursor: pointer;"><svg xmlns="http://www.w3.org/2000/svg" width="21" height="21"
+            <a href="mailto:weddance.in@gamil.com" style="cursor: pointer;"><svg xmlns="http://www.w3.org/2000/svg" width="21" height="21"
               fill="currentColor" class="bi bi-envelope-at-fill text-white" viewBox="0 0 16 16">
               <path
                 d="M2 2A2 2 0 0 0 .05 3.555L8 8.414l7.95-4.859A2 2 0 0 0 14 2zm-2 9.8V4.698l5.803 3.546zm6.761-2.97-6.57 4.026A2 2 0 0 0 2 14h6.256A4.5 4.5 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586zM16 9.671V4.697l-5.803 3.546.338.208A4.5 4.5 0 0 1 12.5 8c1.414 0 2.675.652 3.5 1.671" />
